--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.115.0
-uvicorn[standard]==0.32.0
+uvicorn==0.32.0
 pydantic==2.9.2
 python-multipart==0.0.12
 python-dotenv==1.0.0
@@ -23,6 +23,3 @@ langchain-google-genai>=1.0.0
 
 # Document parsing
 pypdf==4.0.1
-python-docx==1.1.0
-openpyxl==3.1.2
-pandas==2.2.0
